workloads/poc13-networking/broken-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: poc12-tenant-a-oci:networking.k8s.io/Ingress:poc12-tenant-a/ingress-service
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"poc12-tenant-a-oci:networking.k8s.io/Ingress:poc12-tenant-a/ingress-service","nginx.ingress.kubernetes.io/rewrite-target":"/$1","nginx.ingress.kubernetes.io/use-regex":"true"},"name":"ingress-service","namespace":"poc12-tenant-a"},"spec":{"ingressClassName":"nginx","rules":[{"host":"tenant-a.platform-demo.local","http":{"paths":[{"backend":{"service":{"name":"server-cluster-ip [...]
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  creationTimestamp: "2026-06-15T03:46:38Z"
  generation: 1
  name: ingress-service
  namespace: poc12-tenant-a
  resourceVersion: "445363"
  uid: 84da0139-2701-4004-9aca-1fcbb74915cb
spec:
  ingressClassName: nginx
  rules:
  - host: tenant-a.platform-demo.local
    http:
      paths:
      - backend:
          service:
            name: wrong-service
            port:
              number: 5000
        path: /api/(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: client-cluster-ip-service
            port:
              number: 3000
        path: /(.*)
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 172.18.0.5
